--- a/grafana-prometheus-alertmanager docker/docker-compose.yml
+++ b/grafana-prometheus-alertmanager docker/docker-compose.yml
@@ -5,6 +5,8 @@ services:
   grafana:
     image: grafana/grafana:9.5.14
     restart: unless-stopped
+    volumes:
+      - ./grafana.ini:/etc/grafana/grafana.ini
     depends_on:
       - prometheus
     ports:
