--- a/grafana-prometheus-alertmanager docker/alertmanager.yml
+++ b/grafana-prometheus-alertmanager docker/alertmanager.yml
@@ -1,18 +1,34 @@
+global:
+  resolve_timeout: 5m
+
 route:
-  receiver: 'telegram'
-  routes:    
-  # All alerts with severity=warning or severity=critical
-  # are dispatched to the telegram receiver.
-  - receiver: 'telegram'
-    group_wait: 10s
-    matchers:
-    - severity=~"warning|critical"
+  group_by: ['alertname']
+  group_wait: 30s
+  group_interval: 5m
+  repeat_interval: 12h
+  receiver: default-receiver
+  routes:
+  - match:
+      severity: critical
+    receiver: email-receiver
+  - match:
+      notify: telegram
+    receiver: telegram-receiver
 
 receivers:
-- name: 'telegram'
-  telegram_configs:
-  - bot_token: "xxx"
-    chat_id: -xxx
 
-#  https://api.telegram.org/botINSERT_BOT_ID_HERE/getUpdates - to get chat_id
-#  amtool --alertmanager.url=http://localhost:9093/ alert add alertname="Test alert" severity="warning" job="test-job" - to send test alert
+- name: default-receiver
+
+- name: email-receiver
+  email_configs:
+  - to: 'xxx'
+    from: 'xxx'
+    require_tls: false
+    smarthost: 'smtp.gmail.com:465'
+    auth_username: 'xxx'
+    auth_password: 'xxx'
+
+- name: telegram-receiver
+  telegram_configs:
+    - bot_token: "xxx"
+      chat_id: -xxx
