--- a/grafana-prometheus-alertmanager docker/prometheus.yml
+++ b/grafana-prometheus-alertmanager docker/prometheus.yml
@@ -21,3 +21,8 @@ scrape_configs:
     scrape_interval: 15s
     static_configs:
       - targets: ['node-exporter:9100']
+
+  - job_name: 'grafana'
+    scrape_interval: 15s
+    static_configs:
+      - targets: ['grafana:3000']
